<resources>
    <string name="app_name">Agenda App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeTarefa">Tarefa</string>
    <string name="DescricaoTarefa">Descrição da Tarefa</string>
    <string name="titulo">Titulo da Tarefa</string>
    <string name="btSalvar">SALVAR</string>
    <string name="btData">Data</string>
    <string name="erroData">Por favor informe a data</string>
    <string name="erroTarefa">Digite o Nome da Tarefa</string>
    <string name="descricaoOpicional">Opicinal</string>
    <string name="titulo_lista">Java</string>
    <string name="data_lista">10/02/1985</string>
    <string name="status_lista">Completado</string>
    <string name="status_aberta">Aberta</string>
    <string name="status_finalizada">Finalizada</string>
    <string name="atrasada">Atrasada</string>


</resources>