<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadTarefa">




      <TextView
          android:id="@+id/textTitulo"
          android:layout_width="match_parent"
          android:textAlignment="center"
          android:layout_height="wrap_content"
          android:text="@string/titulo"
          />
      <EditText
          android:id="@+id/editTitulo"
          android:layout_width="match_parent"
          android:layout_marginTop="20dp"
          android:background="@drawable/borda"
          android:layout_height="wrap_content"

          />
      <TextView
          android:id="@+id/textDesc"
          android:textAlignment="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
          android:text="@string/DescricaoTarefa"
          />
        <EditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/descricaoOpicional"
            android:background="@drawable/borda"
            android:layout_marginTop="70dp"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="4"

            />
        <Button
            android:id="@+id/btData"
            android:text="@string/btData"
            android:background="@drawable/borda"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            />
        <Button
            android:id="@+id/btSave"
            android:text="@string/btSalvar"
            android:background="@drawable/borda"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp" />





</FrameLayout>