<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear1"
    android:background="@drawable/borda"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_lista"
        android:textSize="25sp"
        android:id="@+id/text_view_titulo_tarefa"

        />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/data_lista"
        android:textSize="15sp"
        android:id="@+id/text_view_data_tarefa"
        />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/status_lista"
        android:textSize="15sp"
        android:background="@drawable/borda"
        android:id="@+id/text_view_status_tarefa"
        />





</LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>